# compliance-mvp

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  groq_client.py  main.py  schemas.py  services.py
docs/: architecture.md  production-readiness-experiment.md  production-readiness-report.md
scripts/: __init__.py  offline_load_test.py
tests/: eval_cases.json  test_api.py  test_composite.py  test_groq_client.py  test_groq_integration.py  test_policy_service.py  test_production_readiness_failures.py  test_validation.py
