[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "compliance-mvp"
version = "0.1.0"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi>=0.139,<0.140",
    "groq>=1.5,<2",
    "pydantic>=2,<3",
    "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
    "httpx",
    "pytest",
]

[tool.pytest.ini_options]
addopts = "-ra -m 'not integration'"
markers = [
    "integration: opt-in tests that may call external services",
]
pythonpath = ["."]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
